relativize within workspaces